argo/apps/portainer/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    homepage.name: "portainer"
  name: portainer
  namespace: portainer

spec:
  type: ClusterIP
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 9000
      targetPort: 9000
    - name: https
      port: 9443
      targetPort: 9443
    - name: edge
      port: 8000
      targetPort: 8000
  selector:
    app.kubernetes.io/name: portainer
