argo/apps/portainer/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: portainer
  labels:
    app.kubernetes.io/name: portainer
    gethomepage.dev/enabled: true
    gethomepage.dev/group: Cluster Manangemenr
    gethomepage.dev/name: Portainer
    gethomepage.dev/description: Docker & Swarm manager
    gethomepage.dev/icon: portainer.png
    gethomepag.deve/url: https://portainer.lan
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.lan`)
      kind: Rule
      services:
        - name: portainer
          port: 9000
  tls:
    secretName: lan-tls
